# advent-of-spin-2023

./: README.md
challenge-1/: Cargo.toml  README.md  spin.toml
challenge-1/assets/: christmas-image.avif  index.html
challenge-1/wish-list/: Cargo.toml
challenge-1/wish-list/src/: lib.rs
challenge-2/: spin.toml
challenge-2/santa-capacity/: Cargo.toml
challenge-2/santa-capacity/src/: lib.rs
challenge-3/: spin.toml  test.hurl
challenge-3/llm-story/: Cargo.toml
challenge-3/llm-story/src/: lib.rs
