[package]
name = "aos-p1"
authors = ["Alex Grieco <awgrieco@gmail.com>"]
description = "Advent of Spin 2023 Problem 1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
