[package]
name = "wish-list"
authors = ["Alex Grieco <awgrieco@gmail.com>"]
description = "An endpoint to get Matt's wish list"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
json = "0.12.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
