[package]
name = "llm-story"
authors = ["Alex Grieco <awgrieco@gmail.com>"]
description = "A component that uses an LLM to generate a story given inputs via a POST request."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
